...
                ),
              ),
              // Dropdown for dayplan items
              Container(
                padding: EdgeInsets.symmetric(horizontal: 20, vertical: 20),
                child: DropdownButtonFormField(
                  key: Key('dayplanDropdown'),
                  validator: (value) =>
                      value == null ? 'Dayplan item is required' : null,
                  isExpanded: true,
                  hint: const Text("* Choose item from dayplan",
                      style: TextStyle(fontSize: 20, color: Colors.black)),
                  value: dropdownValue,
...
                    });
                  },
                ),
              ),

              Container(
                key: Key('tagChildrenSelect'),
                padding: EdgeInsets.symmetric(horizontal: 10, vertical: 10),
                child: MultiSelectDialogField(
                  validator: (value) {
                    if (value == null || value.isEmpty) {
                      return 'Must tag at least 1 child';
                    }
...
                ),
              ),
              // description TextField
              Container(
                padding: EdgeInsets.symmetric(horizontal: 10, vertical: 20),
                child: TextField(
                  key: Key('description'),
                  controller: descriptionTextInput,
                  decoration: const InputDecoration(
                      border: OutlineInputBorder(),
                      labelText: 'Description',
                      labelStyle: TextStyle(fontSize: 20, color: Colors.black)),
                ),
...
