...
  Map<popUpDialogType, List<Widget>> buttons = {
    popUpDialogType.Error: [
      TextButton(
          onPressed: () {
            Navigator.of(context).pop();
          },
          child: const Text("OK"))
    ],
    popUpDialogType.Success: [
      TextButton(
          onPressed: () {
            Navigator.of(context).pop();
          },
...
