...
          BottomNavigationBarItem(
            icon: Icon(Icons.calendar_today),
            label: "DayPlan",
          ),
          BottomNavigationBarItem(
            icon: Icon(Icons.home_outlined),
            label: "Home",
          ),
          BottomNavigationBarItem(
            icon: Icon(Icons.message_outlined),
            label: "Messages",
          ),
        ],
...
